# Apex-ai-agent

./: .gitignore  ARCHITECTURE.md  README.md  WORKLOG_P5C.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml  release-apk.yml
.next/dev/: prerender-manifest.json  trace
ai-terminal/: build.gradle.kts
apk/engine/: build.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
database/: build.gradle.kts
docs/: RELEASE_GUIDE.md
engine/: build.gradle.kts  proguard-rules.pro
gradle/: libs.versions.toml
rage-jni/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
rage-native/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
rage-native/src/main/cpp/: CMakeLists.txt
rage-native/src/main/cpp/agent/: AgentOrchestrator.cpp  AgentOrchestrator.h  CriticAgent.cpp  CriticAgent.h  ExecutorAgent.cpp  ExecutorAgent.h  IAgent.h  PlannerAgent.cpp  PlannerAgent.h  SearcherAgent.cpp  SearcherAgent.h
rage-native/src/main/cpp/cache/: AggressiveCache.cpp  AggressiveCache.h  Prefetcher.cpp  Prefetcher.h
rage-native/src/main/cpp/core/: Blackboard.cpp  Blackboard.h  MetricsCollector.cpp  MetricsCollector.h  ParallelScheduler.cpp  ParallelScheduler.h  RageTypes.h  TaskStateMachine.cpp  TaskStateMachine.h
rage-native/src/main/cpp/jni/: rage_jni.cpp
rage-native/src/main/cpp/skill/: SkillGraph.cpp  SkillGraph.h  SkillMatcher.cpp  SkillMatcher.h
rage-native/src/main/cpp/util/: JsonSerializer.cpp  JsonSerializer.h
scripts/: generate-keystore.sh
web/: README.md  eslint.config.mjs  package.json
web/src/app/: layout.tsx  (+1 more)
(+1433 files in other folders)
